
  [ Mikko Ojala, Kari Laakso ]
  * Fixes to PIN lock and unlock cases
  * Timeouts increased to 60 seconds in several network-facing cases
  * "dontcleanup" flag now also affects supplementary service resets
  * PIN Reset default configuration now matches Phonesim interface
  * "--doncleanup" changed to "--cleanup" and removed mandatory environment check
  * Improved command line help

 -- Kari Laakso <kari.laakso@digia.com>  Thu, 20 Jan 2011 10:18:53 +0200

blts-ofono-tests (0.1.15) unstable; urgency=low

  * Tests.xml update

 -- Kimmo Myllyvirta <kimmo.myllyvirta@digia.com>  Thu, 16 Dec 2010 11:01:55 +0200

blts-ofono-tests (0.1.14) unstable; urgency=low

  [ Aki Nyman, Pasi Matilainen, Kari Laakso ]
  * Dual call cases (transfer, swap, release & answer, hold & answer) updated to work with oFono 0.33 API
  * Incoming call cases (hangup, hangup all, remote hangup, deflect and cancel) updated to work with oFono 0.33 API
  * Multiparty call case and private chat call case updated to work with oFono 0.33 API
  * Deprecated property changed callback functions removed from call volume and call meter test cases
  * Propose scan test case updated to work with oFono 0.33 API
  * SMSC number test fixed to save and restore original SMSC number and read test values from configuration file
  * Fixed SMS tests and added bearer support for oFono 0.33
  * Added support for test case timeout handling via configuration file
  * Support blts-common 0.4.0

 -- Kari Laakso <kari.laakso@digia.com>  Thu, 11 Nov 2010 16:02:47 +0300

blts-ofono-tests (0.1.13) unstable; urgency=low

  [ Mikko Ojala ]
  * Fixed call forwarding tests for oFono 0.31
  * Fixed call barring tests for oFono 0.31
  * Added modem power on and online checks to test case inits

 -- Mikko Ojala <mikko.ojala@digia.com>  Thu, 28 Oct 2010 15:23:13 +0300

blts-ofono-tests (0.1.12) unstable; urgency=low

  [ Pasi Matilainen, Mika Niinistö, Kimmo Myllyvirta ]
  * Add RPM packaging