@@ -2,6 +2,7 @@
 - [ Mikko Ojala ] Added radio technology change test
 - [ Kari Laakso ] "--dontcleanup" changed to "--cleanup" and removed mandatory environment check
 - [ Kari Laakso ] Improved command line help
+- [ Kari Laakso ] Improved all voice call, dual call and multiparty case run time instructions
 
 * Tue 11 Jan 2011 Mikko Ojala <mikko.ojala@digia.com> - 0.1.16
 - Fixes to PIN lock and unlock cases
